[gd_scene load_steps=17 format=4 uid="uid://c4xmotgopwct"]

[ext_resource type="Script" uid="uid://c3vwc6w5nc0qk" path="res://scripts/main.gd" id="1_yqjtg"]
[ext_resource type="Script" uid="uid://ditp8ftbse1xk" path="res://scripts/camera.gd" id="2_gee14"]
[ext_resource type="PackedScene" uid="uid://5lpa4tlr0djd" path="res://scenes/player.tscn" id="2_lnu2h"]
[ext_resource type="PackedScene" uid="uid://dhikk887yojmk" path="res://boxes.tscn" id="3_lnu2h"]
[ext_resource type="PackedScene" uid="uid://2qbsfxti0leb" path="res://scenes/explode_box.tscn" id="4_p57ef"]
[ext_resource type="Texture2D" uid="uid://cxn0k05mgd62y" path="res://assets/SciAssets/SciSpriteSheet.png" id="5_iywne"]
[ext_resource type="Texture2D" uid="uid://bssrpnorek8o1" path="res://assets/SciAssets/SciSplodeSheet.png" id="6_gee14"]
[ext_resource type="PackedScene" uid="uid://cmci153vr4utt" path="res://scenes/explode_wall.tscn" id="6_u5sy4"]
[ext_resource type="Script" uid="uid://q7nubblr50yd" path="res://scenes/door_and_plate.gd" id="9_0tnpc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5sy4"]
size = Vector2(432, 9.90099)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0tnpc"]
size = Vector2(11, 208)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iywne"]
texture = ExtResource("5_iywne")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0tnpc"]
texture = ExtResource("6_gee14")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_p57ef"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_iywne")
sources/1 = SubResource("TileSetAtlasSource_0tnpc")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vtaks"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvpfn"]
size = Vector2(10, 10)

[node name="Main" type="Node2D"]
script = ExtResource("1_yqjtg")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(16, 16)
zoom = Vector2(3, 3.4)
script = ExtResource("2_gee14")

[node name="AreaUp" type="Area2D" parent="Camera2D"]
position = Vector2(0, -112)

[node name="AreaUpColl" type="CollisionShape2D" parent="Camera2D/AreaUp"]
scale = Vector2(0.99, 1.01)
shape = SubResource("RectangleShape2D_u5sy4")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="AreaDown" type="Area2D" parent="Camera2D"]
position = Vector2(0, 112)

[node name="AreaDownColl" type="CollisionShape2D" parent="Camera2D/AreaDown"]
scale = Vector2(0.99, 1.01)
shape = SubResource("RectangleShape2D_u5sy4")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="AreaRight" type="Area2D" parent="Camera2D"]
position = Vector2(224, -16)

[node name="AreaRightColl" type="CollisionShape2D" parent="Camera2D/AreaRight"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_0tnpc")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="AreaLeft" type="Area2D" parent="Camera2D"]
position = Vector2(-224, -16)

[node name="AreaLeftColl" type="CollisionShape2D" parent="Camera2D/AreaLeft"]
position = Vector2(0.5, 18.5)
shape = SubResource("RectangleShape2D_0tnpc")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="Player" parent="." instance=ExtResource("2_lnu2h")]
position = Vector2(0, -1)

[node name="Boxes" parent="." instance=ExtResource("3_lnu2h")]
position = Vector2(-16, -48)

[node name="ExplodeBox" parent="." instance=ExtResource("4_p57ef")]
position = Vector2(0, -48)

[node name="explodingBox" parent="ExplodeBox" index="0"]
countdown = 3

[node name="TileMapLayerWalls" type="TileMapLayer" parent="."]
show_behind_parent = true
light_mask = 4
visibility_layer = 4
position = Vector2(8, -8)
tile_map_data = PackedByteArray("AAAJAPv/AAAFAAMAAAD1//v/AQAEAAEAAAD2//v/AAAFAAMAAAD3//v/AAAFAAMAAAALAPv/AQAEAAIAAAD0//v/AAAFAAIAAAD0//z/AQAEAAEAAAD0/wYAAAAFAAIAAAD0/wUAAAAFAAIAAAD1//z/AAAGAAMAAAD0//3/AAAGAAIAAAD0////AAAGAAIAAAD0/wAAAAAGAAIAAAD0/wEAAAAGAAIAAAD0/wIAAAAGAAIAAAD0/wMAAAAGAAIAAAD0/wQAAQAFAAIAAAD5/wQAAAAFAAEAAAAJAAUAAAADAAAAAAABAAEAAAAGAAEAAAAKAP3/AAAEAAAAAAAFAPz/AAAGAAIAAAABAAUAAAAGAAMAAAAGAPv/AAAFAAMAAAD0//7/AAAGAAIAAAADAPr/AAACAAAAAAADAPv/AAACAAAAAAACAPr/AAAGAAEAAAAEAPr/AAAEAAEAAAAFAPr/AAAFAAEAAAAGAPr/AAAFAAEAAAAHAPr/AAAFAAEAAAAIAPr/AAAFAAEAAAAJAPr/AAAFAAEAAAAKAPr/AAAFAAEAAAALAPr/AAAFAAEAAAAMAPr/AAAFAAEAAAANAPr/AAAFAAEAAAAOAPr/AAAFAAEAAAABAPr/AAAFAAEAAAAAAPr/AAAFAAEAAAD+//r/AAAFAAEAAAD9//r/AAAFAAEAAAD8//r/AAAFAAEAAAD7//r/AAAFAAEAAAD6//r/AAAFAAEAAAD5//r/AAAFAAEAAAD4//r/AAAFAAEAAAD3//r/AAAFAAEAAAD2//r/AAAFAAEAAAD1//r/AAAFAAEAAAD0//r/AAAFAAEAAADz//r/AAAFAAEAAADy//r/AAAFAAEAAADz//v/AAAFAAIAAADz//z/AAAFAAIAAADz//3/AAAFAAIAAADz//7/AAAFAAIAAADz////AAAFAAIAAADz/wAAAAAFAAIAAADz/wEAAAAFAAIAAADy//v/AAAFAAIAAADy//z/AAAFAAIAAADy//3/AAAFAAIAAADy//7/AAAFAAIAAADy////AAAFAAIAAADy/wAAAAAFAAIAAADy/wEAAAAFAAIAAADy/wIAAAAFAAIAAADy/wMAAAAFAAIAAADy/wQAAAAFAAIAAADy/wUAAAAFAAIAAADy/wYAAAAFAAIAAADz/wYAAAAFAAIAAADz/wUAAAAFAAIAAADz/wQAAAAFAAIAAADz/wMAAAAFAAIAAADz/wIAAAAFAAIAAAAMAPv/AAAFAAIAAAANAPv/AAAFAAIAAAAOAPv/AAAFAAIAAAAOAPz/AAAFAAIAAAAOAP3/AAAFAAIAAAAOAP7/AAAFAAIAAAAOAP//AAAFAAIAAAAOAAAAAAAFAAIAAAAOAAEAAAAFAAIAAAAOAAIAAAAFAAIAAAAOAAMAAAAFAAIAAAAOAAQAAAAFAAIAAAAOAAUAAAAFAAIAAAAMAAYAAQAFAAEAAAANAAYAAAAFAAIAAAANAAcAAAAFAAIAAAAOAAcAAAAFAAIAAAAOAAYAAAAFAAIAAAANAAQAAAAFAAIAAAANAAMAAAAFAAIAAAANAAUAAAAFAAIAAAANAAIAAAAFAAIAAAANAAEAAAAFAAIAAAANAP//AAAFAAIAAAANAP7/AAAFAAIAAAANAP3/AAAFAAIAAAANAPz/AAAFAAIAAAANAAAAAAAFAAIAAAAMAAcAAAAFAAIAAAALAAcAAQAFAAEAAAAOAAgAAAAFAAIAAAANAAgAAAAFAAIAAAAMAAgAAAAFAAIAAAALAAgAAAAFAAIAAAAKAAgAAAAFAAIAAAAJAAgAAAAFAAIAAAAIAAgAAAAFAAIAAAAHAAgAAAAFAAIAAAAGAAgAAAAFAAIAAAAFAAgAAAAFAAIAAAAEAAgAAAAFAAIAAAADAAgAAAAFAAIAAAACAAgAAAAFAAIAAAABAAgAAAAFAAIAAAAAAAgAAAAFAAIAAAD//wgAAAAFAAIAAAD+/wgAAAAFAAIAAAD9/wgAAAAFAAIAAAD8/wgAAAAFAAIAAAD7/wgAAAAFAAIAAAD6/wgAAAAFAAIAAAD5/wgAAAAFAAIAAAD4/wgAAAAFAAIAAAD3/wgAAAAFAAIAAAD2/wgAAAAFAAIAAAD1/wcAAAAFAAIAAAD0/wcAAAAFAAIAAADz/wcAAAAFAAIAAADy/wcAAAAFAAIAAADy/wgAAAAFAAIAAADz/wgAAAAFAAIAAAD0/wgAAAAFAAIAAAD1/wgAAAAFAAIAAAD2/wcAAAAFAAIAAAD3/wcAAAAFAAIAAAD4/wcAAAAFAAIAAAD5/wcAAAAFAAIAAAD6/wcAAAAFAAIAAAD7/wcAAAAFAAIAAAD8/wcAAQAFAAIAAAD9/wcAAAAFAAEAAAD+/wcAAAAFAAEAAAD//wcAAAAFAAEAAAAAAAcAAAAFAAEAAAABAAcAAAAFAAEAAAACAAcAAAAFAAEAAAADAAcAAAAFAAEAAAAEAAcAAAAFAAEAAAAFAAcAAAAFAAEAAAAGAAcAAAAFAAEAAAAHAAcAAAAFAAEAAAAIAAcAAQAFAAEAAAAJAAcAAAAFAAEAAAAKAAcAAAAFAAEAAADx//r/AAAFAAIAAADx//v/AAAFAAIAAADx//z/AAAFAAIAAADx//3/AAAFAAIAAADx//7/AAAFAAIAAADx////AAAFAAIAAADx/wAAAAAFAAIAAADx/wEAAAAFAAIAAADx/wIAAAAFAAIAAADx/wMAAAAFAAIAAADx/wQAAAAFAAIAAADx/wUAAAAFAAIAAADx/wYAAAAFAAIAAADx/wcAAAAFAAIAAADx/wgAAAAFAAIAAAAIAPv/AAAFAAMAAAAHAPv/AAAFAAMAAAD///r/AAAFAAEAAAAMAP3/AAAEAAIAAAAMAP7/AAAEAAIAAAAMAP//AAAEAAIAAAAMAAAAAAAEAAIAAAAMAAEAAAAEAAIAAAAMAAIAAAAEAAIAAAAMAAMAAAAEAAIAAAAMAAQAAAAEAAIAAAALAPz/AAAEAAMAAAAKAPv/AAAFAAMAAAAMAPz/AQAEAAIAAAAMAAUAAAAEAAIAAAALAAYAAAAEAAEAAAD1/wYAAAAFAAIAAAD+/wEAAAAEAAEAAAAAAAEAAAAFAAEAAAD+////AAAGAAIAAAAAAP//AAAEAAMAAAAAAP7/AAAEAAEAAAD+//7/AAAGAAIAAAD+//z/AAAFAAMAAAD///z/AAAFAAMAAAD7//3/AAAGAAIAAAD8//7/AAAGAAEAAAD9//z/AAAFAAMAAAD8//v/AAAFAAIAAAD9//v/AAAFAAIAAAD+//v/AAAFAAIAAAD///v/AAAFAAIAAAAAAPv/AAAFAAIAAAD8//z/AAAFAAMAAAD7//z/AQAEAAEAAAD6//3/AAAEAAIAAAD6//z/AAAEAAIAAAD6//v/AQAEAAIAAAD7//v/AAAFAAIAAAAAAPz/AAAFAAMAAAABAPz/AAAFAAMAAAACAP3/AAAEAAIAAAACAPz/AQAEAAIAAAABAPv/AAAFAAIAAAACAPv/AAAFAAIAAAACAP7/AQAFAAEAAAABAP7/AAAFAAEAAAD8/wEAAAAGAAEAAAD7//7/AQAFAAIAAAD7////AAAFAAMAAAD6////AQAEAAEAAAD6/wEAAQAFAAIAAAD8////AAAGAAMAAAD7/wIAAAAFAAMAAAD8/wIAAAAGAAMAAAD6/wIAAAAEAAMAAAD7/wEAAAAFAAEAAAAEAPz/AAAEAAIAAAAEAP3/AAAEAAIAAAAEAP7/AAAEAAIAAAAEAP//AAAEAAIAAAAEAAAAAAAEAAIAAAAEAAEAAAAEAAIAAAADAAIAAAAFAAEAAAACAAIAAAAFAAEAAAAEAAIAAQAFAAEAAAABAAIAAQAFAAIAAAABAP//AAAFAAMAAAACAP//AAAGAAMAAAD+/wIAAAAEAAIAAAD8/wQAAAAGAAEAAAD7/wQAAAAFAAEAAAD6/wQAAAAFAAEAAAD4/wQAAAAFAAEAAAD3/wQAAAAFAAEAAAD2/wQAAAAFAAEAAAD1/wQAAAAFAAEAAAD+/wQAAAAEAAIAAAD4/wIAAAAGAAMAAAD2/wIAAAAEAAMAAAD4/wEAAAAGAAIAAAD2/wEAAAAEAAIAAAD2//7/AAAEAAEAAAD4//7/AAAEAAMAAAD6//7/AAAEAAIAAAD5//v/AAAFAAMAAAD4//3/AAAEAAEAAAD4//v/AAAFAAMAAAD8/wUAAAAGAAIAAAD+/wUAAAAEAAMAAAD1/wUAAAAFAAIAAAD2/wUAAAAFAAIAAAD3/wUAAAAFAAIAAAD4/wUAAAAFAAIAAAD5/wUAAAAFAAIAAAD6/wUAAAAFAAIAAAD7/wUAAAAFAAIAAAD8/wYAAAAGAAIAAAD7/wYAAAAFAAIAAAD6/wYAAAAFAAIAAAD5/wYAAAAFAAIAAAD4/wYAAAAFAAIAAAD3/wYAAAAFAAIAAAD2/wYAAAAFAAIAAAAAAAIAAAAFAAIAAAABAAQAAQAEAAEAAAABAAMAAAAFAAIAAAACAAMAAQAEAAEAAAACAAQAAAAGAAMAAAADAAMAAAAFAAMAAAAEAAMAAAAFAAMAAAAAAAMAAAAFAAIAAAAAAAUAAAAFAAMAAAAAAAQAAAAFAAIAAAD+/wMAAAAEAAIAAAAFAAIAAAAGAAIAAAAFAAEAAAAGAAEAAAAFAAMAAAAFAAMAAAAEAPv/AAAEAAIAAAAFAPv/AQAEAAEAAAAEAAUAAAAEAAEAAAAFAAUAAAAFAAEAAAAGAAUAAAAFAAEAAAAIAAUAAAAEAAIAAAAIAAYAAAAEAAIAAAAIAAQAAAAEAAIAAAAIAAMAAAAEAAEAAAAJAAIAAAAEAAIAAAAJAAEAAAAEAAIAAAAIAAAAAAAFAAMAAAAJAAMAAQAFAAEAAAAJAAAAAQAEAAIAAAAGAAMAAAAFAAMAAAAHAAAAAAAFAAMAAAAGAP7/AAAGAAMAAAAGAP3/AAAGAAEAAAAFAP3/AQAFAAIAAAAFAP7/AAAFAAMAAAAIAP7/AAAEAAMAAAAIAP3/AAAEAAEAAAAJAP7/AQAEAAIAAAAJAP//AAAEAAIAAAA=")
tile_set = SubResource("TileSet_p57ef")

[node name="TileMapLayerFloor" type="TileMapLayer" parent="TileMapLayerWalls"]
show_behind_parent = true
light_mask = 8
visibility_layer = 8
tile_map_data = PackedByteArray("AAD0//v/AAACAAAAAAD1//v/AAACAAAAAAD2//v/AAACAAAAAAD3//v/AAACAAAAAAD4//v/AAACAAAAAAD5//v/AAACAAAAAAD6//v/AAACAAAAAAD7//v/AAACAAAAAAD8//v/AAACAAAAAAD9//v/AAACAAAAAAD+//v/AAACAAAAAAD///v/AAACAAAAAAAAAPv/AAACAAAAAAABAPv/AAACAAAAAAACAPv/AAACAAAAAAADAPv/AAACAAAAAAAEAPv/AAACAAAAAAAFAPv/AAACAAAAAAAGAPv/AAACAAAAAAAHAPv/AAACAAAAAAAIAPv/AAACAAAAAAAJAPv/AAACAAAAAAAKAPv/AAACAAAAAAAKAPz/AAACAAAAAAALAPz/AAACAAAAAAALAP3/AAACAAAAAAALAPv/AAACAAAAAAALAP7/AAACAAAAAAALAP//AAACAAAAAAALAAAAAAACAAAAAAALAAEAAAACAAAAAAALAAIAAAACAAAAAAALAAMAAAACAAAAAAALAAQAAAACAAAAAAALAAUAAAACAAAAAAALAAYAAAACAAAAAAAKAAYAAAACAAAAAAAJAAYAAAACAAAAAAAIAAYAAAACAAAAAAAHAAYAAAACAAAAAAAGAAYAAAACAAAAAAAFAAYAAAACAAAAAAAEAAYAAAACAAAAAAADAAYAAAACAAAAAAACAAYAAAACAAAAAAABAAYAAAACAAAAAAAAAAYAAAACAAAAAAD//wYAAAACAAAAAAD+/wYAAAACAAAAAAD9/wYAAAACAAAAAAD8/wYAAAACAAAAAAD7/wYAAAACAAAAAAD6/wYAAAACAAAAAAD5/wYAAAACAAAAAAD4/wYAAAACAAAAAAD3/wYAAAACAAAAAAD2/wYAAAACAAAAAAD1/wYAAAACAAAAAAD0/wYAAAACAAAAAAD0/wUAAAACAAAAAAD0/wQAAAACAAAAAAD0/wMAAAACAAAAAAD0/wIAAAACAAAAAAD0/wEAAAACAAAAAAD0/wAAAAACAAAAAAD0////AAACAAAAAAD0//7/AAACAAAAAAD0//3/AAACAAAAAAD0//z/AAACAAAAAAD1//z/AAACAAAAAAD1//3/AAACAAAAAAD1//7/AAACAAAAAAD1////AAACAAAAAAD1/wAAAAACAAAAAAD1/wEAAAACAAAAAAD1/wIAAAACAAAAAAD1/wMAAAACAAAAAAD1/wQAAAACAAAAAAD1/wUAAAACAAAAAAD2/wUAAAACAAAAAAD+/wUAAAACAAAAAAD//wUAAAACAAAAAAAAAAUAAAACAAAAAAABAAUAAAACAAAAAAACAAUAAAACAAAAAAADAAUAAAACAAAAAAAEAAUAAAACAAAAAAAFAAUAAAACAAAAAAAGAAUAAAACAAAAAAAHAAUAAAACAAAAAAAIAAUAAAACAAAAAAAJAAUAAAACAAAAAAAKAAUAAAACAAAAAAAJAAQAAAACAAAAAAAIAAQAAAACAAAAAAAKAAQAAAACAAAAAAAKAAMAAAACAAAAAAAKAAIAAAACAAAAAAAKAAEAAAACAAAAAAAKAAAAAAACAAAAAAAKAP//AAACAAAAAAAKAP7/AAACAAAAAAAKAP3/AAACAAAAAAAJAPz/AAACAAAAAAAIAPz/AAACAAAAAAAHAPz/AAACAAAAAAAGAPz/AAACAAAAAAAFAPz/AAACAAAAAAAEAPz/AAACAAAAAAADAPz/AAACAAAAAAACAPz/AAACAAAAAAABAPz/AAACAAAAAAAAAPz/AAACAAAAAAD///z/AAACAAAAAAD+//z/AAACAAAAAAD9//z/AAACAAAAAAD8//z/AAACAAAAAAD7//z/AAACAAAAAAD6//z/AAACAAAAAAD5//z/AAACAAAAAAD4//z/AAACAAAAAAD3//z/AAACAAAAAAD2//z/AAACAAAAAAD3//3/AAACAAAAAAD4//3/AAACAAAAAAD5//3/AAACAAAAAAD6//3/AAACAAAAAAD7//3/AAACAAAAAAD8//3/AAACAAAAAAD9//3/AAACAAAAAAD+//3/AAACAAAAAAD///3/AAACAAAAAAAAAP3/AAACAAAAAAABAP3/AAACAAAAAAACAP3/AAACAAAAAAADAP3/AAACAAAAAAAEAP3/AAACAAAAAAAFAP3/AAACAAAAAAAGAP3/AAACAAAAAAAHAP3/AAACAAAAAAAIAP3/AAACAAAAAAAJAP3/AAACAAAAAAAJAP7/AAACAAAAAAAIAP7/AAACAAAAAAAHAP7/AAACAAAAAAAGAP7/AAACAAAAAAAFAP7/AAACAAAAAAAEAP7/AAACAAAAAAADAP7/AAACAAAAAAACAP7/AAACAAAAAAABAP7/AAACAAAAAAAAAP7/AAACAAAAAAD///7/AAACAAAAAAD+//7/AAACAAAAAAD9//7/AAACAAAAAAD8//7/AAACAAAAAAD7//7/AAACAAAAAAD6//7/AAACAAAAAAD5//7/AAACAAAAAAD4//7/AAACAAAAAAD3//7/AAACAAAAAAD2//7/AAACAAAAAAD2//3/AAACAAAAAAD2////AAACAAAAAAD2/wAAAAACAAAAAAD2/wEAAAACAAAAAAD2/wIAAAACAAAAAAD2/wMAAAACAAAAAAD2/wQAAAACAAAAAAD3/wUAAAACAAAAAAD4/wUAAAACAAAAAAD5/wUAAAACAAAAAAD6/wUAAAACAAAAAAD7/wUAAAACAAAAAAD8/wUAAAACAAAAAAAGAAQAAAACAAAAAAAHAAQAAAACAAAAAAAFAAQAAAACAAAAAAAEAAQAAAACAAAAAAADAAQAAAACAAAAAAACAAQAAAACAAAAAAABAAQAAAACAAAAAAAAAAQAAAACAAAAAAD//wQAAAACAAAAAAD+/wQAAAACAAAAAAD9/wQAAAACAAAAAAD8/wQAAAACAAAAAAD7/wQAAAACAAAAAAD6/wQAAAACAAAAAAD9/wUAAAACAAAAAAD5/wQAAAACAAAAAAD4/wQAAAACAAAAAAD3/wQAAAACAAAAAAD3/wMAAAACAAAAAAD4/wMAAAACAAAAAAD5/wMAAAACAAAAAAD6/wMAAAACAAAAAAADAAMAAAACAAAAAAAEAAMAAAACAAAAAAAFAAMAAAACAAAAAAAGAAMAAAACAAAAAAAHAAMAAAACAAAAAAAIAAMAAAACAAAAAAAJAAMAAAACAAAAAAAJAAIAAAACAAAAAAAIAAIAAAACAAAAAAAHAAIAAAACAAAAAAAGAAIAAAACAAAAAAAFAAIAAAACAAAAAAAEAAIAAAACAAAAAAADAAIAAAACAAAAAAACAAIAAAACAAAAAAABAAIAAAACAAAAAAAAAAIAAAACAAAAAAD//wIAAAACAAAAAAD+/wIAAAACAAAAAAD9/wIAAAACAAAAAAD9/wEAAAACAAAAAAD8/wEAAAACAAAAAAD7/wEAAAACAAAAAAD6/wEAAAACAAAAAAD5/wEAAAACAAAAAAD4/wEAAAACAAAAAAD3/wEAAAACAAAAAAD3/wIAAAACAAAAAAD4/wIAAAACAAAAAAD5/wIAAAACAAAAAAD6/wIAAAACAAAAAAD7/wIAAAACAAAAAAD8/wIAAAACAAAAAAD+/wEAAAACAAAAAAD//wEAAAACAAAAAAAAAAEAAAACAAAAAAABAAEAAAACAAAAAAACAAEAAAACAAAAAAADAAEAAAACAAAAAAAEAAEAAAACAAAAAAAFAAEAAAACAAAAAAAGAAEAAAACAAAAAAAHAAEAAAACAAAAAAAIAAEAAAACAAAAAAAJAAEAAAACAAAAAAAIAAAAAAACAAAAAAAHAAAAAAACAAAAAAAGAAAAAAACAAAAAAAFAAAAAAACAAAAAAAEAAAAAAACAAAAAAADAAAAAAACAAAAAAACAAAAAAACAAAAAAABAAAAAAACAAAAAAAAAAAAAAACAAAAAAD//wAAAAACAAAAAAD+/wAAAAACAAAAAAD9/wAAAAACAAAAAAD8/wAAAAACAAAAAAD7/wAAAAACAAAAAAD6/wAAAAACAAAAAAD5/wAAAAACAAAAAAD4/wAAAAACAAAAAAD4////AAACAAAAAAD3////AAACAAAAAAD3/wAAAAACAAAAAAD5////AAACAAAAAAD6////AAACAAAAAAD7////AAACAAAAAAD8////AAACAAAAAAD9////AAACAAAAAAD+////AAACAAAAAAD/////AAACAAAAAAAAAP//AAACAAAAAAABAP//AAACAAAAAAACAP//AAACAAAAAAADAP//AAACAAAAAAAEAP//AAACAAAAAAAFAP//AAACAAAAAAAGAP//AAACAAAAAAAHAP//AAACAAAAAAAIAP//AAACAAAAAAAJAP//AAACAAAAAAAJAAAAAAACAAAAAAD7/wMAAAACAAAAAAD8/wMAAAACAAAAAAD9/wMAAAACAAAAAAD+/wMAAAACAAAAAAD//wMAAAACAAAAAAAAAAMAAAACAAAAAAABAAMAAAACAAAAAAACAAMAAAACAAAAAAA=")
tile_set = SubResource("TileSet_p57ef")

[node name="ExplodeWall" parent="." instance=ExtResource("6_u5sy4")]
position = Vector2(64, -80)

[node name="ExplodeWall2" parent="." instance=ExtResource("6_u5sy4")]
position = Vector2(-80, 0)

[node name="ExplodeBox2" parent="." instance=ExtResource("4_p57ef")]
position = Vector2(-128, 0)

[node name="explodingBox" parent="ExplodeBox2" index="0"]
countdown = 3

[node name="ExplodeWall3" parent="." instance=ExtResource("6_u5sy4")]
position = Vector2(-16, 0)

[node name="ExplodeWall4" parent="." instance=ExtResource("6_u5sy4")]
position = Vector2(16, 0)

[node name="ExplodeBox3" parent="." instance=ExtResource("4_p57ef")]
position = Vector2(-48, 0)

[node name="explodingBox" parent="ExplodeBox3" index="0"]
countdown = 3

[node name="ExplodeBox4" parent="." instance=ExtResource("4_p57ef")]
position = Vector2(-144, -48)

[node name="explodingBox" parent="ExplodeBox4" index="0"]
countdown = 27

[node name="ExplodeWall5" parent="." instance=ExtResource("6_u5sy4")]
position = Vector2(-96, -16)

[node name="ExplodeBox5" parent="." instance=ExtResource("4_p57ef")]
position = Vector2(-96, -48)

[node name="explodingBox" parent="ExplodeBox5" index="0"]
countdown = 13

[node name="ExplodeWall6" parent="." instance=ExtResource("6_u5sy4")]
position = Vector2(-32, 80)

[node name="Boxes2" parent="." instance=ExtResource("3_lnu2h")]
position = Vector2(-32, -32)

[node name="ExplodeWall7" parent="." instance=ExtResource("6_u5sy4")]
position = Vector2(-112, 48)

[node name="Boxes3" parent="." instance=ExtResource("3_lnu2h")]
position = Vector2(112, 64)

[node name="ExplodeBox6" parent="." instance=ExtResource("4_p57ef")]
position = Vector2(64, 64)

[node name="explodingBox" parent="ExplodeBox6" index="0"]
countdown = 2

[node name="ExplodeBox8" parent="." instance=ExtResource("4_p57ef")]
position = Vector2(144, 16)

[node name="explodingBox" parent="ExplodeBox8" index="0"]
countdown = 2

[node name="ExplodeBox9" parent="." instance=ExtResource("4_p57ef")]
position = Vector2(96, -16)

[node name="explodingBox" parent="ExplodeBox9" index="0"]
countdown = 2

[node name="DoorAndPlate" type="Node2D" parent="."]
show_behind_parent = true
light_mask = 2
visibility_layer = 2
position = Vector2(144, -16)
script = ExtResource("9_0tnpc")

[node name="PlateArea" type="Area2D" parent="DoorAndPlate"]
show_behind_parent = true
collision_layer = 0
collision_mask = 15
monitorable = false

[node name="Plate" type="CollisionShape2D" parent="DoorAndPlate/PlateArea"]
show_behind_parent = true
light_mask = 2
visibility_layer = 2
shape = SubResource("RectangleShape2D_vtaks")

[node name="PlateSprite" type="Sprite2D" parent="DoorAndPlate/PlateArea"]
modulate = Color(1, 0.768627, 1, 1)
show_behind_parent = true
light_mask = 2
visibility_layer = 2
texture = ExtResource("5_iywne")
region_enabled = true
region_rect = Rect2(32, 0, 16, 16)

[node name="DoorArea" type="Area2D" parent="DoorAndPlate"]
position = Vector2(-16, -16)
collision_layer = 2
collision_mask = 2

[node name="DoorColl" type="CollisionShape2D" parent="DoorAndPlate/DoorArea"]
show_behind_parent = true
light_mask = 2
visibility_layer = 2
shape = SubResource("RectangleShape2D_kvpfn")

[node name="DoorSprite" type="Sprite2D" parent="DoorAndPlate/DoorArea"]
modulate = Color(1, 0, 1, 1)
show_behind_parent = true
light_mask = 2
visibility_layer = 2
texture = ExtResource("5_iywne")
region_enabled = true
region_rect = Rect2(80, 32, 16, 16)

[connection signal="area_entered" from="Camera2D/AreaUp" to="Camera2D" method="_on_area_up_area_entered"]
[connection signal="area_entered" from="Camera2D/AreaDown" to="Camera2D" method="_on_area_down_area_entered"]
[connection signal="area_entered" from="Camera2D/AreaRight" to="Camera2D" method="_on_area_right_area_entered"]
[connection signal="area_entered" from="Camera2D/AreaLeft" to="Camera2D" method="_on_area_left_area_entered"]
[connection signal="area_entered" from="DoorAndPlate/PlateArea" to="DoorAndPlate" method="_on_plate_area_area_entered"]
[connection signal="area_exited" from="DoorAndPlate/PlateArea" to="DoorAndPlate" method="_on_plate_area_area_exited"]

[editable path="ExplodeBox"]
[editable path="ExplodeBox2"]
[editable path="ExplodeBox3"]
[editable path="ExplodeBox4"]
[editable path="ExplodeBox5"]
[editable path="ExplodeBox6"]
[editable path="ExplodeBox8"]
[editable path="ExplodeBox9"]
